--- a/src/package.json
+++ b/src/package.json
@@ -43,6 +43,7 @@
 		"@types/node": "^20",
 		"autoprefixer": "^10.4.23",
 		"concurrently": "^9.2.1",
+		"daisyui": "^4.12.22",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.13.1",
